; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/converter/palm_usb/extr_matrix.c_get_serial_byte.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/converter/palm_usb/extr_matrix.c_get_serial_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_serial_byte.code = internal global i64 0, align 8
@.str = private unnamed_addr constant [2 x i8] c" \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @get_serial_byte() #0 {
  br label %1

1:                                                ; preds = %0, %10
  %2 = call i64 (...) @serial_recv()
  store i64 %2, i64* @get_serial_byte.code, align 8
  %3 = load i64, i64* @get_serial_byte.code, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load i64, i64* @get_serial_byte.code, align 8
  %7 = call i32 @debug_hex(i64 %6)
  %8 = call i32 @debug(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %9 = load i64, i64* @get_serial_byte.code, align 8
  ret i64 %9

10:                                               ; preds = %1
  br label %1
}

declare dso_local i64 @serial_recv(...) #1

declare dso_local i32 @debug_hex(i64) #1

declare dso_local i32 @debug(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
